csmsapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: csmsapi
  name: csmsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: csmsapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/csms-cadmusnetwork: "true"
        io.kompose.service: csmsapi
    spec:
      containers:
        - image: ${DOCKER_REGISTRY-}csmsapi
          name: csmsapi
          resources: {}
      restartPolicy: Always
status: {}
