deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csmsapi
  labels:
    app: csms_api_deploymentpod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: csms_api_deploymentpod
  template:
    metadata:
      labels:
        app: csms_api_deploymentpod
    spec:
      containers:
      - name: csmsapiploymentcontainer
        image: khouly/api_kub:latest
        ports:
        - containerPort: 80
