service.yml
apiVersion: v1
kind: Service
metadata:
  name: csmsapideploymentservice
spec:
  selector:
    app.kubernetes.io/name: csms_api_deploymentpod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2020
