sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sql
  name: sql
spec:
  ports:
    - name: "5566"
      port: 5566
      targetPort: 1433
  selector:
    io.kompose.service: sql
status:
  loadBalancer: {}
