csms-cadmusnetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: csms-cadmusnetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/csms-cadmusnetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/csms-cadmusnetwork: "true"
